--- a/Frontend/tse_client_workspace/apps/healan-portal/src/styles.scss
+++ b/Frontend/tse_client_workspace/apps/healan-portal/src/styles.scss
@@ -26,7 +26,7 @@ button {
   font-family: inherit;
   cursor: pointer;
   border: none;
-  background: none;
+  background-color: transparent;
 }
 
 a {
